Revision history for {{$dist->name}}

{{$NEXT}}

2.15      2020-04-20 13:17:00 -0600
  - Switched to EUMM
  - Removed Dist::Zilla::Plugin::Author::Plicease (now reunited with Dist::Zilla::PluginBundle::Author::Plicease)
  - Altered exclusion logic for MSWin32 (mainly to account for Visual C++ + vcpkg)
  - Updated my dists to latest
  - Added Acme::Ford::Prefect2::FFI
  - Added Alien::libuv
  - Added Alien::help2man
  - Added Alien::wasmtime
  - Added App::supertouch
  - Added Text::Hunspell
  - Added Wasm
  - Added Wasm::Hook
  - Added Win32::Vcpkg

2.14      2019-12-16 12:21:02 -0700
  - Updated my dists to latest

2.12      2019-12-14 13:55:13 -0700
  - Updated my dists to latest
  - Added Perl::Critic::Plicease
  - Added Alien::Expat
  - Added FFI::Platypus::Record::StringArray
  - Added Alien::chromaprint
  - Added Browser::Start
  - Added Exception::Class::DBI

2.11      2019-05-19 14:07:56 -0600
  - Updated my dists to latest
  - Added Alien::Build::Plugin::Download::GitHub
  - Added Alien::libuuid
  - Added Alien::unzip
  - Added Dist::Zilla::Plugin::Bootstrap::lib
  - Added Dist::Zilla::Plugin::DynamicPrereqs
  - Added Dist::Zilla::Plugin::Meta::Dynamic::Config
  - Added Dist::Zilla::Plugin::PPPort

2.10      2019-02-16 12:23:08 -0500
  - updated my dists to latest
  - Added Test2::Tools::FFI
  - Added FFI::Platypus::Legacy::Raw
  - Added App::whichdll

2.09      2019-02-11 14:32:15 -0500
  - updated my dists to latest
  - Remove FFI-Build as it is now part of FFI-Platypus
  - Added Alien::Librdkafka
  - Added Kafka::Librd
  - Added WebService::DailyConnect
  - FFI is now installed on more platforms as it relies
    on FFI-PLatypus instead of ffcall now

2.08      2018-12-27 15:06:53 -0500
  - updated my dists to latest
  - Remove Dist::Zilla::Plugin::FFI::CheckLib
    (now part of Dist::Zilla::Plugin::FFI)

2.07      2018-08-23 14:55:34 -0400
  - Add NewRelic::Agent::FFI
  - Add Alien::nragent
  - Add Dist::Zilla::Plugin::FFI::CheckLib