@@ -47,7 +47,7 @@ Alien::Expat                                   = 0.01
 Alien::FFI                                     = 0.25
 Alien::flex                                    = 0.14
 Alien::gmake                                   = 0.21
-Alien::GMP                                     = 1.14
+Alien::GMP                                     = 1.16
 Alien::gzip                                    = 0.06
 Alien::help2man                                = 0.01
 Alien::Hunspell                                = 0.16
@@ -58,7 +58,7 @@ Alien::LibreSSL                                = 0.03
 Alien::libuuid                                 = 0.02
 Alien::libtool                                 = 0.14
 Alien::LibYAML                                 = 2.05
-Alien::Libxml2                                 = 0.15
+Alien::Libxml2                                 = 0.16
 Alien::LZO                                     = 0.02
 Alien::m4                                      = 0.19
 Alien::MSYS                                    = 0.14
@@ -70,7 +70,7 @@ Alien::pkgconf                                 = 0.16
 Alien::Role::Alt                               = 0.05
 Alien::Role::Dino                              = 0.06
 Alien::unzip                                   = 0.03
-Alien::wasmtime                                = 0.07
+Alien::wasmtime                                = 0.08
 Alien::xz                                      = 0.06
 ;Alt::Alien::cmake::System                     = 0.0402
 ;Alt::Alien::FFI::System                       = 0.21
@@ -78,7 +78,7 @@ Alien::xz                                      = 0.06
 ;Alt::FFI::Raw::FFI                            = 0.02
 AnyEvent::Finger                               = 0.11
 AnyEvent::FTP                                  = 0.16
-AnyEvent::Ident                                = 0.07
+AnyEvent::Ident                                = 0.08
 AnyEvent::Open3::Simple                        = 0.87
 AnyEvent::WebSocket::Client                    = 0.53
 App::af                                        = 0.15
@@ -87,10 +87,10 @@ App::Prove::Plugin::TermTable                  = 0.03
 App::Prove::Plugin::TermTableStty              = 0.03
 App::pwhich                                    = 1.16
 App::RegexFileUtils                            = 0.08
-App::spaceless                                 = 0.07
+App::spaceless                                 = 0.08
 App::supertouch                                = 0.02
 App::whichdll                                  = 0.03
-Archive::Ar::Libarchive                        = 2.07
+Archive::Ar::Libarchive                        = 2.08
 Archive::Libarchive::Any                       = 0.0900
 Archive::Libarchive::FFI                       = 0.0901
 Archive::Libarchive::XS                        = 0.0902
@@ -122,7 +122,7 @@ FFI::Platypus::Lang::Pascal                    = 0.06
 FFI::Platypus::Lang::Rust                      = 0.09
 FFI::Platypus::Legacy::Raw                     = 0.06
 FFI::Platypus::Record::StringArray             = 0.01
-FFI::Platypus::Type::StringArray               = 0.02
+FFI::Platypus::Type::PtrObject                 = 0.02
 FFI::TinyCC                                    = 0.29
 FFI::TinyCC::Inline                            = 0.28
 FFI::Util                                      = 0.17
@@ -175,10 +175,11 @@ Win32::Vcpkg                                   = 0.04
 Win32API::ProcessStatus                        = 0.05
 WWW::Bugzilla::BugTree                         = 0.08
 
-App::Ack                                       = 0
-App::cpanminus                                 = 0
+App::Ack                                       = v3.3.1
+App::cpanminus                                 = 1.7044
 Archive::Tar::Wrapper                          = 0.15
-autodie                                        = 0
+autodie                                        = 0.37
+Cpanel::JSON::XS                               = 4.19
 DBD::mysqlPP                                   = 0
 DBD::PgPP                                      = 0
 DBD::SQLite                                    = 0
@@ -188,19 +189,14 @@ Dist::Zilla::Plugin::Bootstrap::lib            = 0
 Dist::Zilla::Plugin::DynamicPrereqs            = 0
 Dist::Zilla::Plugin::Meta::Dynamic::Config     = 0
 Dist::Zilla::Plugin::PPPort                    = 0
-EV                                             = 0
 File::Listing                                  = 0
 JSON                                           = 0
 JSON::MaybeXS                                  = 0
 local::lib                                     = 0
 ; Module::CoreList is in core, but in separate rpms
 Module::Which                                  = 0
-Monkey::Patch                                  = 0
-Moose                                          = 2.1604
+Moose                                          = 2.2012
 
-Pod::POM::Web                                  = 0
-Role::Tiny                                     = 0
-Template                                       = 0
 Test::CPAN::Changes                            = 0
 Test::EOL                                      = 0
 Test::Memory::Cycle                            = 0
@@ -213,8 +209,6 @@ Test::Spelling                                 = 0
 YAML                                           = 0
 YAML::XS                                       = 0
 Text::Hunspell                                 = 0
-
-Alien::libuv                                   = 1.012
 
 [Author::Plicease::Upload]
 cpan = 0
